# meal-planner

./: .gitignore  Cargo.toml  README.md  crud.py  database.py  foodbuddy.db  ingredient.py  main.py  models.py  recipe.py  schemas.py  sql_app.db  tag.py  unit.py
app/: crud.py  database.py  main.py  models.py  schemas.py  unit.py
app/data/: tags.json
app/data/ingredients/: beef.json  dairy.json  fruits.json  grains.json  legumes.json  nuts_seeds.json  pasta.json  poultry.json  seafood.json  spices.json  vegetables.json
app/routers/: ingredient.py
data/: tags.json
data/ingredients/: dairy.json  fruits.json  grains.json  legumes.json  pasta.json  pork.json  poultry.json  vegetables.json
db/: session.py
models/: base.py  recipe.py
old/: crud.py  requirements.txt  schemas.py
old/src/: main.rs  recipe.rs  tag.rs  tests.rs
src/: crud.rs  food_item.rs  ingredient.rs  main.rs  recipe.rs  tag.rs  unit.rs
src/crud/: ingredient.rs  mod.rs  recipe.rs  tag.rs
web-ui/: package.json
web-ui/src/: App.js  IngredientsDialog.js  RecipeDetail.js  RecipeList.js  TagsDialog.js
