[package]
name = "meal-planner"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "sqlite"] }
actix-web = "4.3"
actix-files = "0.6"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.25", features = ["macros", "rt-multi-thread"]}
tempfile = "3.3"